<resources>
    <string name="app_name">Vivlia</string>
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_search">Search</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_profile">Profile</string>
    <string name="title_performance">Performance</string>
    <string name="profile_title">Profile</string>
    <string name="quiz_title">Quiz</string>
    <string name="performance_title">Performance</string>
    <string name="settings">Settings</string>
    <string name="library">Library</string>
    <string name="see_more">SEE MORE</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>