<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_architecture_24"
        android:title="@string/title_quiz"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_performance"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/title_performance"/>

</menu>