<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <FrameLayout
        android:id="@+id/search_layout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/more_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/rounded_corner_bg"
        >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            app:defaultQueryHint="Search for a book..."
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:iconifiedByDefault="false"
            />
    </FrameLayout>


    <ImageButton
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/more_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/library_text"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/library"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        app:layout_constraintBottom_toBottomOf="@id/library_text"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toRightOf="@id/library_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/library_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/library_recycler"
        app:layout_constraintTop_toBottomOf="@id/library_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:layout_width="0dp"
        android:layout_height="250dp"/>

    <TextView
        android:id="@+id/continue_reading_title"
        app:layout_constraintTop_toBottomOf="@id/library_recycler"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:text="@string/continue_reading"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/continue_reading_recycler"
        app:layout_constraintTop_toBottomOf="@id/continue_reading_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>